src/antlr/terraformParser.js
// Generated from .\terraformParser.g4 by ANTLR 4.9.3
// jshint ignore: start
import antlr4 from 'antlr4';
import TerraformListener from '../parser/TerraformListener.js';


  static symbolicNames = [null, 'MODULE', 'DATA', 'SOURCE', 'PROVIDER',
    'TERRAFORM', 'RESOURCE', 'VARIABLE', 'OUTPUT',
    'LIST', 'MAP', 'OBJECT', 'CONDITION', 'ERROR',
    'AO', 'AF', 'EQUAL', 'PO', 'PF', 'CO', 'CF',
    'VIRG', 'POINT', 'TIRET', 'MULT', 'BOOLEANOP',
    'BOOLEAN', 'TYPE', 'IDENTIFIER', 'STRING',
    'NUMBER', 'COMMENT', 'LINE_COMMENT', 'HAS_COMMENT',
    'WS', 'OPEN', 'IDENTIFIERS', 'WSS', 'NUMBERS',
    'AUTRE', 'CLOSE'];

  static ruleNames = ['file', 'directive', 'dataDirective', 'moduleDirective',
    'moduleSource', 'providerDirective', 'terraformDirective',
    'resourceDirective', 'variableDirective', 'outputDirective',
    'name', 'providerType', 'type', 'object', 'field',
    'complexField', 'validation', 'condition', 'expression',
    'functionCall', 'complexExpression', 'array', 'index'];

  constructor(input) {
    super(input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = terraformParser.ruleNames;
    this.literalNames = terraformParser.literalNames;
    this.symbolicNames = terraformParser.symbolicNames;
  }

  get atn() {
    return atn;
  }

  sempred(localctx, ruleIndex, predIndex) {
    	switch (ruleIndex) {
    	case 20:
    	    		return this.complexExpression_sempred(localctx, predIndex);
      default:
        throw `No predicate with index:${ruleIndex}`;
    }
  }

  complexExpression_sempred(localctx, predIndex) {
    	switch (predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 6);
    		case 1:
    			return this.precpred(this._ctx, 5);
    		case 2:
    			return this.precpred(this._ctx, 4);
    		default:
    			throw `No predicate with index:${predIndex}`;
    	}
  }

  file() {
	    const localctx = new FileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, terraformParser.RULE_file);
	    let _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 47;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 46;
	            this.directive();
	            this.state = 49;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while ((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << terraformParser.MODULE) | (1 << terraformParser.DATA) | (1 << terraformParser.PROVIDER) | (1 << terraformParser.TERRAFORM) | (1 << terraformParser.RESOURCE) | (1 << terraformParser.VARIABLE) | (1 << terraformParser.OUTPUT))) !== 0));
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  directive() {
	    const localctx = new DirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, terraformParser.RULE_directive);
	    try {
	        this.state = 58;
	        this._errHandler.sync(this);
	        switch (this._input.LA(1)) {
	        case terraformParser.PROVIDER:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 51;
	            this.providerDirective();
	            break;
	        case terraformParser.TERRAFORM:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 52;
	            this.terraformDirective();
	            break;
	        case terraformParser.RESOURCE:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 53;
	            this.resourceDirective();
	            break;
	        case terraformParser.VARIABLE:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 54;
	            this.variableDirective();
	            break;
	        case terraformParser.OUTPUT:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 55;
	            this.outputDirective();
	            break;
	        case terraformParser.MODULE:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 56;
	            this.moduleDirective();
	            break;
	        case terraformParser.DATA:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 57;
	            this.dataDirective();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  dataDirective() {
	    const localctx = new DataDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, terraformParser.RULE_dataDirective);
	    let _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 60;
	        this.match(terraformParser.DATA);
	        this.state = 61;
	        this.providerType();
	        this.state = 62;
	        this.name();
	        this.state = 63;
	        this.match(terraformParser.AO);
	        this.state = 65;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 64;
	            this.object();
	            this.state = 67;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while (_la === terraformParser.SOURCE || _la === terraformParser.IDENTIFIER);
	        this.state = 69;
	        this.match(terraformParser.AF);
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  moduleDirective() {
	    const localctx = new ModuleDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, terraformParser.RULE_moduleDirective);
	    let _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 71;
	        this.match(terraformParser.MODULE);
	        this.state = 72;
	        this.name();
	        this.state = 73;
	        this.match(terraformParser.AO);
	        this.state = 76;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 76;
	            this._errHandler.sync(this);
	            const la_ = this._interp.adaptivePredict(this._input, 3, this._ctx);
	            switch (la_) {
	            case 1:
	                this.state = 74;
	                this.moduleSource();
	                break;

	            case 2:
	                this.state = 75;
	                this.object();
	                break;
	            }
	            this.state = 78;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while (_la === terraformParser.SOURCE || _la === terraformParser.IDENTIFIER);
	        this.state = 80;
	        this.match(terraformParser.AF);
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  moduleSource() {
	    const localctx = new ModuleSourceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, terraformParser.RULE_moduleSource);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 82;
	        this.match(terraformParser.SOURCE);
	        this.state = 83;
	        this.match(terraformParser.EQUAL);
	        this.state = 84;
	        this.match(terraformParser.STRING);
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  providerDirective() {
	    const localctx = new ProviderDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, terraformParser.RULE_providerDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 86;
	        this.match(terraformParser.PROVIDER);
	        this.state = 87;
	        this.name();
	        this.state = 88;
	        this.match(terraformParser.AO);
	        this.state = 89;
	        this.object();
	        this.state = 90;
	        this.match(terraformParser.AF);
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  terraformDirective() {
	    const localctx = new TerraformDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, terraformParser.RULE_terraformDirective);
	    let _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 92;
	        this.match(terraformParser.TERRAFORM);
	        this.state = 93;
	        this.match(terraformParser.AO);
	        this.state = 95;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 94;
	            this.object();
	            this.state = 97;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while (_la === terraformParser.SOURCE || _la === terraformParser.IDENTIFIER);
	        this.state = 99;
	        this.match(terraformParser.AF);
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  resourceDirective() {
	    const localctx = new ResourceDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, terraformParser.RULE_resourceDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 101;
	        this.match(terraformParser.RESOURCE);
	        this.state = 102;
	        this.providerType();
	        this.state = 103;
	        this.name();
	        this.state = 104;
	        this.match(terraformParser.AO);
	        this.state = 105;
	        this.object();
	        this.state = 106;
	        this.match(terraformParser.AF);
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  variableDirective() {
	    const localctx = new VariableDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, terraformParser.RULE_variableDirective);
	    let _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 108;
	        this.match(terraformParser.VARIABLE);
	        this.state = 109;
	        this.name();
	        this.state = 110;
	        this.match(terraformParser.AO);
	        this.state = 112;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 111;
	            this.object();
	            this.state = 114;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while (_la === terraformParser.SOURCE || _la === terraformParser.IDENTIFIER);
	        this.state = 116;
	        this.match(terraformParser.AF);
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  outputDirective() {
	    const localctx = new OutputDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, terraformParser.RULE_outputDirective);
	    let _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 118;
	        this.match(terraformParser.OUTPUT);
	        this.state = 119;
	        this.name();
	        this.state = 120;
	        this.match(terraformParser.AO);
	        this.state = 122;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 121;
	            this.object();
	            this.state = 124;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while (_la === terraformParser.SOURCE || _la === terraformParser.IDENTIFIER);
	        this.state = 126;
	        this.match(terraformParser.AF);
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  name() {
	    const localctx = new NameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, terraformParser.RULE_name);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 128;
	        this.match(terraformParser.STRING);
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  providerType() {
	    const localctx = new ProviderTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, terraformParser.RULE_providerType);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 130;
	        this.match(terraformParser.STRING);
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  type() {
	    const localctx = new TypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, terraformParser.RULE_type);
	    try {
	        this.state = 149;
	        this._errHandler.sync(this);
	        const la_ = this._interp.adaptivePredict(this._input, 8, this._ctx);
	        switch (la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 132;
	            this.match(terraformParser.TYPE);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 133;
	            this.match(terraformParser.LIST);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 134;
	            this.match(terraformParser.LIST);
	            this.state = 135;
	            this.match(terraformParser.PO);
	            this.state = 136;
	            this.type();
	            this.state = 137;
	            this.match(terraformParser.PF);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 139;
	            this.match(terraformParser.MAP);
	            this.state = 140;
	            this.match(terraformParser.PO);
	            this.state = 141;
	            this.type();
	            this.state = 142;
	            this.match(terraformParser.PF);
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 144;
	            this.match(terraformParser.OBJECT);
	            this.state = 145;
	            this.match(terraformParser.PO);
	            this.state = 146;
	            this.object();
	            this.state = 147;
	            this.match(terraformParser.PF);
	            break;
	        }
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  object() {
	    const localctx = new ObjectContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, terraformParser.RULE_object);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 153;
	        this._errHandler.sync(this);
	        let _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 153;
	        		this._errHandler.sync(this);
	        		var la_ = this._interp.adaptivePredict(this._input, 9, this._ctx);
	        		switch (la_) {
	        		case 1:
	        		    this.state = 151;
	        		    this.complexField();
	        		    break;

	        		case 2:
	        		    this.state = 152;
	        		    this.field();
	        		    break;
	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 155;
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input, 10, this._ctx);
	        } while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER);
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  field() {
	    const localctx = new FieldContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, terraformParser.RULE_field);
	    let _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 157;
	        _la = this._input.LA(1);
	        if (!(_la === terraformParser.SOURCE || _la === terraformParser.IDENTIFIER)) {
	        this._errHandler.recoverInline(this);
	        } else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 158;
	        this.match(terraformParser.EQUAL);
	        this.state = 159;
	        this.expression();
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  complexField() {
	    const localctx = new ComplexFieldContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, terraformParser.RULE_complexField);
	    let _la = 0; // Token type
	    try {
	        this.state = 177;
	        this._errHandler.sync(this);
	        const la_ = this._interp.adaptivePredict(this._input, 12, this._ctx);
	        switch (la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 161;
	            this.match(terraformParser.IDENTIFIER);
	            this.state = 162;
	            this.match(terraformParser.AO);
	            this.state = 163;
	            this.object();
	            this.state = 164;
	            this.match(terraformParser.AF);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 166;
	            this.match(terraformParser.IDENTIFIER);
	            this.state = 167;
	            this.match(terraformParser.EQUAL);
	            this.state = 168;
	            this.match(terraformParser.AO);
	            this.state = 172;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 169;
	                this.match(terraformParser.STRING);
	                this.state = 170;
	                this.match(terraformParser.EQUAL);
	                this.state = 171;
	                this.match(terraformParser.STRING);
	                this.state = 174;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while (_la === terraformParser.STRING);
	            this.state = 176;
	            this.match(terraformParser.AF);
	            break;
	        }
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  validation() {
	    const localctx = new ValidationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, terraformParser.RULE_validation);
	    let _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 179;
	        this.match(terraformParser.AO);
	        this.state = 180;
	        this.match(terraformParser.CONDITION);
	        this.state = 181;
	        this.match(terraformParser.EQUAL);
	        this.state = 183;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 182;
	            this.condition();
	            this.state = 185;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while ((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << terraformParser.BOOLEANOP) | (1 << terraformParser.BOOLEAN) | (1 << terraformParser.IDENTIFIER) | (1 << terraformParser.STRING) | (1 << terraformParser.NUMBER))) !== 0));
	        this.state = 187;
	        this.match(terraformParser.ERROR);
	        this.state = 188;
	        this.match(terraformParser.EQUAL);
	        this.state = 189;
	        this.match(terraformParser.STRING);
	        this.state = 190;
	        this.match(terraformParser.AF);
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  condition() {
	    const localctx = new ConditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, terraformParser.RULE_condition);
	    try {
	        this.state = 197;
	        this._errHandler.sync(this);
	        switch (this._input.LA(1)) {
	        case terraformParser.STRING:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 192;
	            this.match(terraformParser.STRING);
	            break;
	        case terraformParser.NUMBER:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 193;
	            this.match(terraformParser.NUMBER);
	            break;
	        case terraformParser.BOOLEAN:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 194;
	            this.match(terraformParser.BOOLEAN);
	            break;
	        case terraformParser.BOOLEANOP:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 195;
	            this.match(terraformParser.BOOLEANOP);
	            break;
	        case terraformParser.IDENTIFIER:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 196;
	            this.functionCall();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  expression() {
	    const localctx = new ExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, terraformParser.RULE_expression);
	    try {
	        this.state = 205;
	        this._errHandler.sync(this);
	        const la_ = this._interp.adaptivePredict(this._input, 15, this._ctx);
	        switch (la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 199;
	            this.match(terraformParser.NUMBER);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 200;
	            this.match(terraformParser.BOOLEAN);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 201;
	            this.array();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 202;
	            this.complexExpression(0);
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 203;
	            this.match(terraformParser.STRING);
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 204;
	            this.type();
	            break;
	        }
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  functionCall() {
	    const localctx = new FunctionCallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, terraformParser.RULE_functionCall);
	    let _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 207;
	        this.match(terraformParser.IDENTIFIER);
	        this.state = 208;
	        this.match(terraformParser.PO);
	        this.state = 209;
	        this.expression();
	        this.state = 214;
	        this._errHandler.sync(this);
	        let _alt = this._interp.adaptivePredict(this._input, 16, this._ctx);
	        while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if (_alt === 1) {
	                this.state = 210;
	                this.match(terraformParser.VIRG);
	                this.state = 211;
	                this.expression();
	            }
	            this.state = 216;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input, 16, this._ctx);
	        }

	        this.state = 218;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if (_la === terraformParser.VIRG) {
	            this.state = 217;
	            this.match(terraformParser.VIRG);
	        }

	        this.state = 220;
	        this.match(terraformParser.PF);
	    } catch (re) {
	    	if (re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
  }

  complexExpression(_p) {
    if (_p === undefined) {
		    _p = 0;
    }
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ComplexExpressionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 40;
	    this.enterRecursionRule(localctx, 40, terraformParser.RULE_complexExpression, _p);
	    let _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 247;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input, 22, this._ctx);
	        switch (la_) {
	        case 1:
	            this.state = 223;
	            this.match(terraformParser.IDENTIFIER);
	            break;

	        case 2:
	            this.state = 225;
	            this._errHandler.sync(this);
	            var _alt = 1;
	            do {
	            	switch (_alt) {
	            	case 1:
	            		this.state = 224;
	            		_la = this._input.LA(1);
	            		if (!(_la === terraformParser.TIRET || _la === terraformParser.IDENTIFIER)) {
	            		this._errHandler.recoverInline(this);
	            		} else {
	            			this._errHandler.reportMatch(this);
	            		    this.consume();
	            		}
	            		break;
	            	default:
	            		throw new antlr4.error.NoViableAltException(this);
	            	}
	            	this.state = 227;
	            	this._errHandler.sync(this);
	            	_alt = this._interp.adaptivePredict(this._input, 18, this._ctx);
	            } while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER);
	            break;

	        case 3:
	            this.state = 229;
	            this.match(terraformParser.OPEN);
	            this.state = 237;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 237;
	                this._errHandler.sync(this);
	                switch (this._input.LA(1)) {
	                case terraformParser.IDENTIFIERS:
	                    this.state = 230;
	                    this.match(terraformParser.IDENTIFIERS);
	                    break;
	                case terraformParser.AUTRE:
	                    this.state = 231;
	                    this.match(terraformParser.AUTRE);
	                    break;
	                case terraformParser.WSS:
	                    this.state = 233;
	                    this._errHandler.sync(this);
	                    var _alt = 1;
	                    do {
	                    	switch (_alt) {
	                    	case 1:
	                    		this.state = 232;
	                    		this.match(terraformParser.WSS);
	                    		break;
	                    	default:
	                    		throw new antlr4.error.NoViableAltException(this);
	                    	}
	                    	this.state = 235;
	                    	this._errHandler.sync(this);
	                    	_alt = this._interp.adaptivePredict(this._input, 19, this._ctx);
	                    } while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER);
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                }
	                this.state = 239;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while (((((_la - 36)) & ~0x1f) == 0 && ((1 << (_la - 36)) & ((1 << (terraformParser.IDENTIFIERS - 36)) | (1 << (terraformParser.WSS - 36)) | (1 << (terraformParser.AUTRE - 36)))) !== 0));
	            this.state = 241;
	            this.match(terraformParser.CLOSE);
	            break;

	        case 4:
	            this.state = 242;
	            this.match(terraformParser.STRING);
	            this.state = 243;
	            this.complexExpression(0);
	            this.state = 244;
	            this.match(terraformParser.STRING);
	            break;

	        case 5:
	            this.state = 246;
	            this.functionCall();
	            break;
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 262;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input, 24, this._ctx);
	        while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if (_alt === 1) {
	                if (this._parseListeners !== null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 260;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input, 23, this._ctx);
	                switch (la_) {
	                case 1:
	                    localctx = new ComplexExpressionContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, terraformParser.RULE_complexExpression);
	                    this.state = 249;
	                    if (!(this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, 'this.precpred(this._ctx, 6)');
	                    }
	                    this.state = 250;
	                    this.match(terraformParser.POINT);
	                    this.state = 251;
	                    this.complexExpression(7);
	                    break;
